--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -14,8 +14,8 @@ jobs:
     # environment: testing
     env:
       MONGODB_CLUSTER_ADDRESS: learn-github-actions.pelqbrc.mongodb.net
-      MONGODB_USERNAME: rifki
-      MONGODB_PASSWORD: z8KTXromcVnQxsx2
+      MONGODB_USERNAME: ${{ secrets.MONGODB_USERNAME }}
+      MONGODB_PASSWORD: ${{ secrets.MONGODB_PASSWORD }}
       PORT: 8080
     runs-on: ubuntu-latest
     steps:
@@ -33,7 +33,8 @@ jobs:
       - name: Run tests
         run: npm test
       - name: Output information
-        run: echo "MONGODB_USERNAME:\ ${{ env.MONGODB_USERNAME }}"
+        run: |
+          echo "MONGODB_USERNAME: ${{ env.MONGODB_USERNAME }}"
 
   deploy:
     needs: test
